--- a/index.html
+++ b/index.html
@@ -31,26 +31,66 @@
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
-          <li><a href="#">Over-writing is not the answer</a>
+          <li><a href="#">New to working with APIs</a>
+          </li>
+          <li>I recently spoke with a lot of other students at the Flatiron School, where I take online classes, regarding an attempt at building our own app.</li>
+            <sub>posted 3 August 2016</sub>
+          </li>
+          <li><a href="#">Over-writing is not the answer</a></li>
           <li>I’ve just finished my first web app and I’m very proud of it as I put a lot of time into it; but I have learned some very important lessons this week, and those are to work smart and plan ahead. </li>
             <sub>posted 28 July 2016</sub>
           <li><a href="#">[on your mark] get ‘/set/go’</a>
           </li>
           <li>Alright, let me just say one thing, Sinatra is awesome. </li>
             <sub>posted 13 July 2016</sub>
-          <li><a href="#">Learning sql just takes persistence</a>
-          </li>
-          <li>At first, sql was an easy language to pick up. It was pretty basic, just creating tables, inserting into them, selecting from them, altering them… </li>
-            <sub>posted 22 June 2016</sub>
-          </li>
-
         </ul>
+    </aside>
+
+    <section>
+      <h3>New to working with APIs</h3>
+
+      <img src="./images/spotify.png" class="post_photo" alt="spotify api logo">
+
+      <p>I recently spoke with a lot of other students at the Flatiron School, where I take online classes, regarding an attempt at building our own app. I saw some of the projects that they had been working on and was very impressed. After asking some questions, I found that their coding abilities weren’t too far ahead of my own apart from the knowledge of adding and working with APIs.</p>
+
+      <p>These APIs were making a standard new app much more interesting, and I’m being told by the students that they simply found this API online and followed directions to incorporate it into their code. Could it be that easy? I only had a vague understanding of what an API was and had no idea how to integrate them into my code. So if you are anything like me, read on.</p>
+
+      <p>Research break...</p>
+
+      <p>I've found that an API is a program (not always separate from the main function) on a server that dishes out information upon request. This is basically a way for your program to work with the data that any user can plainly see on that website but wouldn’t like to copy manually to due quantity i.e. (latitude and longitude from Google maps, or friends on Facebook).</p>
+
+      <p>So it turns out that most APIs do, in fact, have documentation; but I also found that this documentation can be very difficult to follow for a first timer and that it will certainly take practice. You’ll also have to register an account with the developer site for authentication purposes.</p>
+
+      <p>I decided to do some hands-on research with the Spotify API. The code they provide is all NodeJS, I only have very basic javascript knowledge so this took rather long, but once I pasted what and where I was supposed to, we were up and running. I can now build apps that a user could log in with their Spotify account and my app would be able to work with their favorited songs and playlists to hypothetically recommend local shows etc.</p>
+
+      <sub>posted 3 August 2016</sub>
+    </section>
+
+    <aside id="about_me">
+      <h3>About me</h3>
+
+      <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
+
+      <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
+
+      <sub>as of 13 July 2016</sub>
+    </aside>
+
+    <aside id="links">
+      <h3>Links</h3>
+      <ul>
+        <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
+        <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
+        <li><a href="https://www.linkedin.com/in/jamesrogers3
+        " target="_blank"><img src="./images/linkedin.png"></a></li>
+        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
+      </ul>
     </aside>
 
     <section>
       <h3>Over-writing is NOT the answer</h3>
 
-      <img src="./images/goalsongoals.png" class="post_photo" alt="sqlite logo">
+      <img src="./images/goalsongoals.png" class="post_photo" alt="crappy web app homepage">
 
       <p>I’ve just finished my first web app and I’m very proud of it as I put a lot of time into it; but I have learned some very important lessons this week, and those are to work smart and plan ahead. I literally felt done with the app at least three times but then decided to add another capability. This is not an easy thing in the world of code, my friends. So I say to you, think hard about what you want your app to do and stick to the plan; otherwise you may end up with 10-15 files with 100+ lines of code each, and I don’t know about you but that’s beyond my current mental capacity and code skills.</p>
 
@@ -70,20 +110,15 @@
       <sub>posted 28 July 2016</sub>
     </section>
 
-    <aside id="about_me">
-      <h3>About me</h3>
-
-      <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
-
-      <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
-
-      <sub>as of 13 July 2016</sub>
+    <aside id="twitter">
+      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </aside>
 
     <section>
       <h3>[on your mark] get ‘/set/go’</h3>
 
-      <img src="./images/sinatra.jpeg" class="post_photo" alt="sqlite logo">
+      <img src="./images/sinatra.jpeg" class="post_photo" alt="sinatra logo">
 
       <p>Alright, let me just say one thing, Sinatra is awesome. Once you learn Sinatra as a student coder, Ruby and the front end are finally connected and it feels like you can do anything with it.</p>
 
@@ -99,22 +134,6 @@
 
       <sub>posted 13 July 2016</sub>
     </section>
-
-    <aside id="links">
-      <h3>Links</h3>
-      <ul>
-        <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
-        <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
-        <li><a href="https://www.linkedin.com/in/jamesrogers3
-        " target="_blank"><img src="./images/linkedin.png"></a></li>
-        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
-      </ul>
-    </aside>
-
-    <aside id="twitter">
-      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </aside>
 
     <section>
       <h3>Learning sql just takes persistence</h3>
