--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section>
 
-      <h3>Nested Attributes Make Me Feel RESTless</h3>
+      <h3>Nested Attributes Make Me RESTless</h3>
 
       <img src="./images/rails.png" class="post_photo" alt="ruby on rails logo">
 
