typos in first post

--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
 
       <img src="./images/standup-desk.jpg" class="post_photo" id="rotate" alt="my standup desk work station">
 
-      <p>In short... because I tried some other things and enjoyed this the most I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</p>
+      <p>In short... because I tried some other things and enjoyed this the most. I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</p>
 
-      <p>It starts when I picked the wrong major and the wrong school and breezed through college with minimal effort. Then I finally got a job in real estate but wasn’t being challenged. I dipped my feet in a lot of different areas such as GRE studies, series 7 studies, building a PC, and ended up really enjoying the PC.</p>
+      <p>It started when I picked the wrong major and the wrong school and breezed through college with minimal effort. Then I finally got a job in real estate but wanted more. I dipped my feet in a lot of different areas such as GMAT studies, series 7 studies, building a PC, and ended up really enjoying the PC.</p>
 
-      <p>After lots of research on how each component works, I finally felt like I had a good idea of what I wanted to buy. Then a day or two of tinkering, maybe I had to buy one more component I can’t remember, and then downloading Linux; and I was done! It’s a really cool experience, using a computer that you built. Naturally I wanted to continue, so I poked around on some MOOC Java classes and CodeAcademy and what not. After a while of that, it was time to take the plunge, so I started researching full time classes.</p>
+      <p>After lots of research on how each component works, I finally felt like I had a good idea of what I wanted to buy. Then a day or two of tinkering, maybe I had to buy one more component I can’t remember, and then downloading Linux to a USB and booting; and I was done! It’s a really cool experience, using a computer that I had built. Naturally I wanted to continue, so I poked around on some MOOC Java classes and CodeAcademy and what not. After a while of that, it was time to take the plunge, so I started researching full time classes.</p>
 
       <p>Obviously a big part of my decision was the return on investment. I’d get to be a part of an industry with massive growth and that is the cool thing right now; the salary bump wasn’t bad either, and all for a minimal investment.</p>
 
