--- a/index.html
+++ b/index.html
@@ -29,6 +29,50 @@
     </header>
 
     <section>
+      <h3>Thinking > coding</h3>
+
+      <img src="./images/dilemma.jpeg" class="post_photo" alt="between a rock and a hard place sign">
+
+      <p>I recently went on a canoeing and camping trip on the Saco river in Maine with some friends. One of them happens to be a junior web developer of sorts at Cengage. Naturally I asked him everything I could about his first job as a developer and his response surprised me. When I asked him if he’s learning a lot of new cool code, he said no, he said that he was learning how to think more like a programmer.</p>
+
+      <p>I thought about this for a while. It finally made sense to me when I heard something similar from a Flatiron employee guest speaking on a webinar. He said that when he first started he took a problem, that he could not work out, to his boss and they went through it together; he was amazed that his boss took an hour or more to think everything over and write out pseudo code before even writing one line of actual code.</p>
+
+      <p>I tried to keep all this in mind as I worked on my final project for Rails. It was such a pleasant experience. I feel like I wrote more code than ever before and yet I can still comprehend and organize it all in my head. After finishing my Sinatra app I was so burnt out that I was probably writing really bad code and hardly refactored.</p>
+
+      <p>I’m very pleased with my app and I credit this to two main things, the first is thinking more than coding as you’ve read about above, and the second is to refactor as you go. My main technique for this was, every time I noticed that I was writing a line of code even remotely similar to something else in my app, I would make a comment below that line and get back to it after getting that section running. This way you don’t end up with a lot of scrappy code and too much refactoring to do at the end. Also, if you refactor as you go you get to take little breaks from the creative thinking (well, for a different type of creative thinking anyway) and this gives you more time to reflect on the code you just wrote and if you like how it works in the grand scheme.</p>
+
+      <p>Hopefully you can learn these lessons earlier than me and it will save you some stress! Link to my rails dilemma app repo <a href="https://github.com/jd2rogers2/dilemma_app">here</a></p>
+
+      <sub>posted 22 September 2016</sub>
+    </section>
+
+    <aside id="about_me">
+      <h3>About me</h3>
+
+      <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
+
+      <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
+
+      <sub>as of 13 July 2016</sub>
+    </aside>
+
+    <aside id="links">
+      <h3>Links</h3>
+      <ul>
+        <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
+        <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
+        <li><a href="https://www.linkedin.com/in/jamesrogers3
+        " target="_blank"><img src="./images/linkedin.png"></a></li>
+        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
+      </ul>
+    </aside>
+
+    <aside id="twitter">
+      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </aside>
+
+    <section>
 
       <h3>Nested Attributes Make Me RESTless</h3>
 
@@ -60,32 +104,6 @@
 
       <sub>posted 25 August 2016</sub>
     </section>
-
-    <aside id="about_me">
-      <h3>About me</h3>
-
-      <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
-
-      <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
-
-      <sub>as of 13 July 2016</sub>
-    </aside>
-
-    <aside id="links">
-      <h3>Links</h3>
-      <ul>
-        <li><a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a></li>
-        <li><a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a></li>
-        <li><a href="https://www.linkedin.com/in/jamesrogers3
-        " target="_blank"><img src="./images/linkedin.png"></a></li>
-        <li><a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a></li>
-      </ul>
-    </aside>
-
-    <aside id="twitter">
-      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </aside>
 
     <section>
       <h3>New to working with APIs</h3>
