--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./index.css">
 
-  <!--javascript-->
-  <!--<script type="text/javascript" src="./index.js"></script>-->
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">-->
-
-  <!--favicon-->
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <script type="text/javascript" src ="index.js"></script>
 </head>
 
 <body>
@@ -35,7 +31,7 @@
 
       <p>I recently went on a canoeing and camping trip on the Saco river in Maine with some friends. One of them happens to be a junior web developer of sorts at Cengage. Naturally I asked him everything I could about his first job as a developer and his response surprised me. When I asked him if he’s learning a lot of new cool code, he said no, he said that he was learning how to think more like a programmer.</p>
 
-      <p>I thought about this for a while. It finally made sense to me when I heard something similar from a Flatiron employee guest speaking on a webinar. He said that when he first started he took a problem, that he could not work out, to his boss and they went through it together; he was amazed that his boss took an hour or more to think everything over and write out pseudo code before even writing one line of actual code.</p>
+      <p type="hidden">I thought about this for a while. It finally made sense to me when I heard something similar from a Flatiron employee guest speaking on a webinar. He said that when he first started he took a problem, that he could not work out, to his boss and they went through it together; he was amazed that his boss took an hour or more to think everything over and write out pseudo code before even writing one line of actual code.</p>
 
       <p>I tried to keep all this in mind as I worked on my final project for Rails. It was such a pleasant experience. I feel like I wrote more code than ever before and yet I can still comprehend and organize it all in my head. After finishing my Sinatra app I was so burnt out that I was probably writing really bad code and hardly refactored.</p>
 
