copied bootstrap templates

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <aside id="about_me">
       <h3>About me</h3>
 
-      <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
+      <p>Hi, my name is James, welcome to my blog. I write about things like tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
 
       <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
 
