mostly css fixes

--- a/rebuild-w-bootstrap/index.html
+++ b/rebuild-w-bootstrap/index.html
@@ -21,7 +21,7 @@
 
   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
   <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+<!--   // <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -34,7 +34,7 @@
 
   <div class="navbar navbar-inverse navbar-fixed-left">
     <div class="container">
-      <a class="navbar" href="#">Project name</a>
+      <a class="navbar" href="#">pic</a>
       <!-- Single button -->
       <br><br><br>
       <div class="btn-group">
@@ -49,6 +49,23 @@
           <li><a href="#">Separated link</a></li>
         </ul>
       </div>
+    </div>
+    <div id="aboutme">
+      <aside id="about_me">
+        <h3>About me</h3>
+
+        <p>Hi, my name is James, welcome to my blog. I write about things like tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
+
+        <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
+
+        <sub>as of 13 July 2016</sub>
+      </aside>
+    </div>
+    <div id="links">
+      links
+    </div>
+    <div id="twitter">
+      twitter
     </div>
   </div>
 
@@ -67,9 +84,7 @@
                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                 </div>
               </div>
-              <div class="">
-                <a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseJumbo" aria-expanded="true" aria-controls="collapseJumbo">...</a>
-              </div>
+              <a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseJumbo" aria-expanded="true" aria-controls="collapseJumbo">...</a>
             </div>
           </div>
         </div>
@@ -88,7 +103,7 @@
               </h4>
               <p>summary paragraph</p>
             </div>
-            <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
+            <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
               </div>
@@ -101,6 +116,7 @@
                   Collapsible Group Item #2
                 </a>
               </h4>
+              <p>summary paragraph</p>
             </div>
             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
@@ -115,6 +131,7 @@
                   Collapsible Group Item #3
                 </a>
               </h4>
+              <p>summary paragraph</p>
             </div>
             <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
               <div class="panel-body">
@@ -135,7 +152,7 @@
               </h4>
               <p>summary paragraph</p>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
               </div>
@@ -148,6 +165,7 @@
                   Collapsible Group Item #2
                 </a>
               </h4>
+              <p>summary paragraph</p>
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
@@ -162,6 +180,7 @@
                   Collapsible Group Item #3
                 </a>
               </h4>
+              <p>summary paragraph</p>
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
