--- a/index.html
+++ b/index.html
@@ -2,8 +2,67 @@
 <html>
 <head>
   <title>James D. Rogers Blog</title>
+  <meta charset="UTF-8" name="viewport">
+  <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 <body>
+  <div class="navbar navbar-left">
+    <img src="./images/profile.jpg">
+    <h5>James D. Rogers</h5>
+    <ul>
+      <li>put these in a dropdown when small</li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">About Me</a></li>
+      <li><a href="#">Resumé</a></li>
+    </ul>
 
+    <div class="links">
+      <a href="https://github.com/jd2rogers2" target="_blank"><img src="./images/github.png"></a>
+      <a href="https://twitter.com/sregorsemaj" target="_blank"><img src="./images/twitter.jpeg"></a>
+      <a href="https://www.linkedin.com/in/jamesrogers3
+      " target="_blank"><img src="./images/linkedin.png"></a>
+      <a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a>
+    </div>
+  </div>
+
+  <div class="content-right">
+    <div class="jumbotron">
+      <h3>featured post</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="hidden-content">
+        <p>hidden hidden hidden hidden hidden hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <button class="showPost">more</button>
+    </div>
+
+    <div class="posts">
+      <h3>post</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>hidden hidden hidden hidden hidden hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="./jquery-3.1.0.min.js"></script>
+  <script type="text/javascript" src ="./index.js"></script>
 </body>
 </html>
