css fixes for navbar-top aboutme section overflowing

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
       <a href="https://www.facebook.com/roger.d.jameson" target="_blank"><img src="./images/facebook.png"></a>
     </div>
 
-    <div class="about-me">
-      <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
+    <p>Hi, my name is James, welcome to my blog. Here you'll find posts on an array of different subjects including tech/webdev, volunteering, travel, business/finance, guitar/music, politics, soccer, art, cooking, family, reading, and beer.</p>
 
-      <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
-    </div>
+    <p>I am currently in my mid-twenties and living with my girlfriend in the Boston area. I'm enrolled in Flatiron School's online Learn Verified program in hopes of becoming a full stack web developer. </p>
+    <sub>as of 14 Nov '16</sub>
   </div>
 
   <div class="content-right">
@@ -45,6 +44,7 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
+      <sub>some date</sub>
     </div>
 
     <div class="posts">
@@ -63,6 +63,7 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
+      <sub>some date</sub>
     </div>
 
     <div class="posts">
@@ -81,6 +82,7 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
+      <sub>some date</sub>
     </div>
 
     <div class="posts">
@@ -99,6 +101,7 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
+      <sub>some date</sub>
     </div>
 
     <div class="posts">
@@ -117,6 +120,7 @@
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
+      <sub>some date</sub>
     </div>
 
     <div class="footer">
